change array to single object and fixed exist api